Changed the dependency on azure-communication-common to use the source version, as this library needs an "exports" statement recently added to get compiled.