@@ -46,10 +46,6 @@
     <jacoco.min.linecoverage>0.70</jacoco.min.linecoverage>
     <jacoco.min.branchcoverage>0.45</jacoco.min.branchcoverage>
     <jacoco.skip>true</jacoco.skip>
-    <!-- Configures the Java 9+ run to perform the required module exports, opens, and reads that are necessary for testing but shouldn't be part of the module-info. -->
-    <javaModulesSurefireArgLine>
-      --add-opens com.azure.communication.common/com.azure.communication.common.implementation=ALL-UNNAMED
-    </javaModulesSurefireArgLine>
   </properties>
 
   <dependencies>
@@ -66,7 +62,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-communication-common</artifactId>
-      <version>1.1.5</version> <!-- {x-version-update;com.azure:azure-communication-common;dependency} -->
+      <version>1.2.0-beta.1</version> <!-- {x-version-update;com.azure:azure-communication-common;current} -->
     </dependency>
 
     <!-- Test dependencies -->
